fix some integration test cases